src/org/cProc/sql/CreateTestParser.java
package org.cProc.sql;

// $ANTLR 3.4 D:\\antlr_data\\CreateTest.g 2012-06-29 16:15:19

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class CreateTestParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANDOPERATER", "COMMENT", "COUMER", "EQUAL", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "ID", "IN", "INT", "IS", "LESS", "LIKE", "LPARENT", "MORE", "NOT", "NOTEQUAL", "NULL", "NUM", "OCTAL_ESC", "OROPERATER", "PROG", "RPARENT", "STAT", "StringLiteral", "TOK_ANDCONDITION", "TOK_APP", "TOK_ATOMCONDITION", "TOK_COLUMLIST", "TOK_COLUMN", "TOK_CREATE", "TOK_CREATE_TIMEINDEX", "TOK_FROM", "TOK_FUN", "TOK_GROUP", "TOK_INCONDITION", "TOK_INDEX", "TOK_LOAD", "TOK_ORCONDITION", "TOK_SELECT", "TOK_SELECTLIST", "UNICODE_ESC", "VAR", "WS", "'INT'", "'LONG'", "'STRING'", "'create'", "'data'", "'from'", "'index'", "'inpath'", "'into'", "'load'", "'local'", "'of'", "'on'", "'select'", "'table'", "'time'", "'where'"
    };

    public static final int EOF=-1;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int ANDOPERATER=4;
    public static final int COMMENT=5;
    public static final int COUMER=6;
    public static final int EQUAL=7;
    public static final int ESC_SEQ=8;
    public static final int EXPONENT=9;
    public static final int FLOAT=10;
    public static final int HEX_DIGIT=11;
    public static final int ID=12;
    public static final int IN=13;
    public static final int INT=14;
    public static final int IS=15;
    public static final int LESS=16;
    public static final int LIKE=17;
    public static final int LPARENT=18;
    public static final int MORE=19;
    public static final int NOT=20;
    public static final int NOTEQUAL=21;
    public static final int NULL=22;
    public static final int NUM=23;
    public static final int OCTAL_ESC=24;
    public static final int OROPERATER=25;
    public static final int PROG=26;
    public static final int RPARENT=27;
    public static final int STAT=28;
    public static final int StringLiteral=29;
    public static final int TOK_ANDCONDITION=30;
    public static final int TOK_APP=31;
    public static final int TOK_ATOMCONDITION=32;
    public static final int TOK_COLUMLIST=33;
    public static final int TOK_COLUMN=34;
    public static final int TOK_CREATE=35;
    public static final int TOK_CREATE_TIMEINDEX=36;
    public static final int TOK_FROM=37;
    public static final int TOK_FUN=38;
    public static final int TOK_GROUP=39;
    public static final int TOK_INCONDITION=40;
    public static final int TOK_INDEX=41;
    public static final int TOK_LOAD=42;
    public static final int TOK_ORCONDITION=43;
    public static final int TOK_SELECT=44;
    public static final int TOK_SELECTLIST=45;
    public static final int UNICODE_ESC=46;
    public static final int VAR=47;
    public static final int WS=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CreateTestParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CreateTestParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return CreateTestParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\antlr_data\\CreateTest.g"; }


    public static class condition_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "condition"
    // D:\\antlr_data\\CreateTest.g:13:1: condition : orcondition ;
    public final CreateTestParser.condition_return condition() throws RecognitionException {
        CreateTestParser.condition_return retval = new CreateTestParser.condition_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        CreateTestParser.orcondition_return orcondition1 =null;



        try {
            // D:\\antlr_data\\CreateTest.g:14:2: ( orcondition )
            // D:\\antlr_data\\CreateTest.g:14:6: orcondition
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_orcondition_in_condition82);
            orcondition1=orcondition();

            state._fsp--;

            adaptor.addChild(root_0, orcondition1.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "condition"


    public static class orcondition_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "orcondition"
    // D:\\antlr_data\\CreateTest.g:16:1: orcondition : andcondtion ( OROPERATER andcondtion )* -> ^( TOK_ORCONDITION ( andcondtion )* ) ;
    public final CreateTestParser.orcondition_return orcondition() throws RecognitionException {
        CreateTestParser.orcondition_return retval = new CreateTestParser.orcondition_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token OROPERATER3=null;
        CreateTestParser.andcondtion_return andcondtion2 =null;

        CreateTestParser.andcondtion_return andcondtion4 =null;


        CommonTree OROPERATER3_tree=null;
        RewriteRuleTokenStream stream_OROPERATER=new RewriteRuleTokenStream(adaptor,"token OROPERATER");
        RewriteRuleSubtreeStream stream_andcondtion=new RewriteRuleSubtreeStream(adaptor,"rule andcondtion");
        try {
            // D:\\antlr_data\\CreateTest.g:17:2: ( andcondtion ( OROPERATER andcondtion )* -> ^( TOK_ORCONDITION ( andcondtion )* ) )
            // D:\\antlr_data\\CreateTest.g:17:6: andcondtion ( OROPERATER andcondtion )*
            {
            pushFollow(FOLLOW_andcondtion_in_orcondition95);
            andcondtion2=andcondtion();

            state._fsp--;

            stream_andcondtion.add(andcondtion2.getTree());

            // D:\\antlr_data\\CreateTest.g:17:18: ( OROPERATER andcondtion )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OROPERATER) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\antlr_data\\CreateTest.g:17:19: OROPERATER andcondtion
            	    {
            	    OROPERATER3=(Token)match(input,OROPERATER,FOLLOW_OROPERATER_in_orcondition98);  
            	    stream_OROPERATER.add(OROPERATER3);


            	    pushFollow(FOLLOW_andcondtion_in_orcondition100);
            	    andcondtion4=andcondtion();

            	    state._fsp--;

            	    stream_andcondtion.add(andcondtion4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: andcondtion
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 17:45: -> ^( TOK_ORCONDITION ( andcondtion )* )
            {
                // D:\\antlr_data\\CreateTest.g:17:48: ^( TOK_ORCONDITION ( andcondtion )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(TOK_ORCONDITION, "TOK_ORCONDITION")
                , root_1);

                // D:\\antlr_data\\CreateTest.g:17:66: ( andcondtion )*
                while ( stream_andcondtion.hasNext() ) {
                    adaptor.addChild(root_1, stream_andcondtion.nextTree());

                }
                stream_andcondtion.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "orcondition"


    public static class andcondtion_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "andcondtion"
    // D:\\antlr_data\\CreateTest.g:20:1: andcondtion : ( conditionItem ( ANDOPERATER andcondtion )* -> ^( TOK_ANDCONDITION conditionItem ( andcondtion )* ) | LPARENT orcondition RPARENT ( ANDOPERATER andcondtion )* -> ^( TOK_ANDCONDITION orcondition ( andcondtion )* ) );
    public final CreateTestParser.andcondtion_return andcondtion() throws RecognitionException {
        CreateTestParser.andcondtion_return retval = new CreateTestParser.andcondtion_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ANDOPERATER6=null;
        Token LPARENT8=null;
        Token RPARENT10=null;
        Token ANDOPERATER11=null;
        CreateTestParser.conditionItem_return conditionItem5 =null;

        CreateTestParser.andcondtion_return andcondtion7 =null;

        CreateTestParser.orcondition_return orcondition9 =null;

        CreateTestParser.andcondtion_return andcondtion12 =null;


        CommonTree ANDOPERATER6_tree=null;
        CommonTree LPARENT8_tree=null;
        CommonTree RPARENT10_tree=null;
        CommonTree ANDOPERATER11_tree=null;
        RewriteRuleTokenStream stream_LPARENT=new RewriteRuleTokenStream(adaptor,"token LPARENT");
        RewriteRuleTokenStream stream_ANDOPERATER=new RewriteRuleTokenStream(adaptor,"token ANDOPERATER");
        RewriteRuleTokenStream stream_RPARENT=new RewriteRuleTokenStream(adaptor,"token RPARENT");
        RewriteRuleSubtreeStream stream_andcondtion=new RewriteRuleSubtreeStream(adaptor,"rule andcondtion");
        RewriteRuleSubtreeStream stream_orcondition=new RewriteRuleSubtreeStream(adaptor,"rule orcondition");
        RewriteRuleSubtreeStream stream_conditionItem=new RewriteRuleSubtreeStream(adaptor,"rule conditionItem");
        try {
            // D:\\antlr_data\\CreateTest.g:21:2: ( conditionItem ( ANDOPERATER andcondtion )* -> ^( TOK_ANDCONDITION conditionItem ( andcondtion )* ) | LPARENT orcondition RPARENT ( ANDOPERATER andcondtion )* -> ^( TOK_ANDCONDITION orcondition ( andcondtion )* ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID) ) {
                alt4=1;
            }
            else if ( (LA4_0==LPARENT) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // D:\\antlr_data\\CreateTest.g:21:6: conditionItem ( ANDOPERATER andcondtion )*
                    {
                    pushFollow(FOLLOW_conditionItem_in_andcondtion128);
                    conditionItem5=conditionItem();

                    state._fsp--;

                    stream_conditionItem.add(conditionItem5.getTree());

                    // D:\\antlr_data\\CreateTest.g:21:20: ( ANDOPERATER andcondtion )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==ANDOPERATER) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // D:\\antlr_data\\CreateTest.g:21:21: ANDOPERATER andcondtion
                    	    {
                    	    ANDOPERATER6=(Token)match(input,ANDOPERATER,FOLLOW_ANDOPERATER_in_andcondtion131);  
                    	    stream_ANDOPERATER.add(ANDOPERATER6);


                    	    pushFollow(FOLLOW_andcondtion_in_andcondtion134);
                    	    andcondtion7=andcondtion();

                    	    state._fsp--;

                    	    stream_andcondtion.add(andcondtion7.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    // AST REWRITE
                    // elements: andcondtion, conditionItem
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 21:48: -> ^( TOK_ANDCONDITION conditionItem ( andcondtion )* )
                    {
                        // D:\\antlr_data\\CreateTest.g:21:50: ^( TOK_ANDCONDITION conditionItem ( andcondtion )* )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(TOK_ANDCONDITION, "TOK_ANDCONDITION")
                        , root_1);

                        adaptor.addChild(root_1, stream_conditionItem.nextTree());

                        // D:\\antlr_data\\CreateTest.g:21:84: ( andcondtion )*
                        while ( stream_andcondtion.hasNext() ) {
                            adaptor.addChild(root_1, stream_andcondtion.nextTree());

                        }
                        stream_andcondtion.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // D:\\antlr_data\\CreateTest.g:22:8: LPARENT orcondition RPARENT ( ANDOPERATER andcondtion )*
                    {
                    LPARENT8=(Token)match(input,LPARENT,FOLLOW_LPARENT_in_andcondtion157);  
                    stream_LPARENT.add(LPARENT8);


                    pushFollow(FOLLOW_orcondition_in_andcondtion159);
                    orcondition9=orcondition();

                    state._fsp--;

                    stream_orcondition.add(orcondition9.getTree());

                    RPARENT10=(Token)match(input,RPARENT,FOLLOW_RPARENT_in_andcondtion163);  
                    stream_RPARENT.add(RPARENT10);


                    // D:\\antlr_data\\CreateTest.g:22:39: ( ANDOPERATER andcondtion )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==ANDOPERATER) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // D:\\antlr_data\\CreateTest.g:22:40: ANDOPERATER andcondtion
                    	    {
                    	    ANDOPERATER11=(Token)match(input,ANDOPERATER,FOLLOW_ANDOPERATER_in_andcondtion167);  
                    	    stream_ANDOPERATER.add(ANDOPERATER11);


                    	    pushFollow(FOLLOW_andcondtion_in_andcondtion170);
                    	    andcondtion12=andcondtion();

                    	    state._fsp--;

                    	    stream_andcondtion.add(andcondtion12.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    // AST REWRITE
                    // elements: andcondtion, orcondition
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 22:66: -> ^( TOK_ANDCONDITION orcondition ( andcondtion )* )
                    {
                        // D:\\antlr_data\\CreateTest.g:22:68: ^( TOK_ANDCONDITION orcondition ( andcondtion )* )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(TOK_ANDCONDITION, "TOK_ANDCONDITION")
                        , root_1);

                        adaptor.addChild(root_1, stream_orcondition.nextTree());

                        // D:\\antlr_data\\CreateTest.g:22:100: ( andcondtion )*
                        while ( stream_andcondtion.hasNext() ) {
                            adaptor.addChild(root_1, stream_andcondtion.nextTree());

                        }
                        stream_andcondtion.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "andcondtion"


    public static class conditionItem_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conditionItem"
    // D:\\antlr_data\\CreateTest.g:24:1: conditionItem : ( conditonName MORE INT -> ^( TOK_ATOMCONDITION conditonName MORE INT ) | conditonName EQUAL allItem -> ^( TOK_ATOMCONDITION conditonName EQUAL allItem ) | conditonName NOTEQUAL allItem -> ^( TOK_ATOMCONDITION conditonName NOTEQUAL allItem ) | conditonName LESS INT -> ^( TOK_ATOMCONDITION conditonName LESS INT ) | conditonName ( NOT )? IN LPARENT INT ( COUMER INT )* RPARENT -> ^( TOK_ATOMCONDITION conditonName IN ( NOT )? ( INT )* ) | conditonName ( NOT )? IN LPARENT StringLiteral ( COUMER StringLiteral )* RPARENT -> ^( TOK_ATOMCONDITION conditonName IN ( NOT )? ( StringLiteral )* ) | conditonName IS ( NOT )? NULL -> ^( TOK_ATOMCONDITION conditonName IS ( NOT )? ) | conditonName LIKE StringLiteral -> ^( TOK_ATOMCONDITION conditonName LIKE StringLiteral ) );
    public final CreateTestParser.conditionItem_return conditionItem() throws RecognitionException {
        CreateTestParser.conditionItem_return retval = new CreateTestParser.conditionItem_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token MORE14=null;
        Token INT15=null;
        Token EQUAL17=null;
        Token NOTEQUAL20=null;
        Token LESS23=null;
        Token INT24=null;
        Token NOT26=null;
        Token IN27=null;
        Token LPARENT28=null;
        Token INT29=null;
        Token COUMER30=null;
        Token INT31=null;
        Token RPARENT32=null;
        Token NOT34=null;
        Token IN35=null;
        Token LPARENT36=null;
        Token StringLiteral37=null;
        Token COUMER38=null;
        Token StringLiteral39=null;
        Token RPARENT40=null;
        Token IS42=null;
        Token NOT43=null;
        Token NULL44=null;
        Token LIKE46=null;
        Token StringLiteral47=null;
        CreateTestParser.conditonName_return conditonName13 =null;

        CreateTestParser.conditonName_return conditonName16 =null;

        CreateTestParser.allItem_return allItem18 =null;

        CreateTestParser.conditonName_return conditonName19 =null;

        CreateTestParser.allItem_return allItem21 =null;

        CreateTestParser.conditonName_return conditonName22 =null;

        CreateTestParser.conditonName_return conditonName25 =null;

        CreateTestParser.conditonName_return conditonName33 =null;

        CreateTestParser.conditonName_return conditonName41 =null;

        CreateTestParser.conditonName_return conditonName45 =null;


        CommonTree MORE14_tree=null;
        CommonTree INT15_tree=null;
        CommonTree EQUAL17_tree=null;
        CommonTree NOTEQUAL20_tree=null;
        CommonTree LESS23_tree=null;
        CommonTree INT24_tree=null;
        CommonTree NOT26_tree=null;
        CommonTree IN27_tree=null;
        CommonTree LPARENT28_tree=null;
        CommonTree INT29_tree=null;
        CommonTree COUMER30_tree=null;
        CommonTree INT31_tree=null;
        CommonTree RPARENT32_tree=null;
        CommonTree NOT34_tree=null;
        CommonTree IN35_tree=null;
        CommonTree LPARENT36_tree=null;
        CommonTree StringLiteral37_tree=null;
        CommonTree COUMER38_tree=null;
        CommonTree StringLiteral39_tree=null;
        CommonTree RPARENT40_tree=null;
        CommonTree IS42_tree=null;
        CommonTree NOT43_tree=null;
        CommonTree NULL44_tree=null;
        CommonTree LIKE46_tree=null;
        CommonTree StringLiteral47_tree=null;
        RewriteRuleTokenStream stream_StringLiteral=new RewriteRuleTokenStream(adaptor,"token StringLiteral");
        RewriteRuleTokenStream stream_RPARENT=new RewriteRuleTokenStream(adaptor,"token RPARENT");
        RewriteRuleTokenStream stream_IN=new RewriteRuleTokenStream(adaptor,"token IN");
        RewriteRuleTokenStream stream_MORE=new RewriteRuleTokenStream(adaptor,"token MORE");
        RewriteRuleTokenStream stream_IS=new RewriteRuleTokenStream(adaptor,"token IS");
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleTokenStream stream_NULL=new RewriteRuleTokenStream(adaptor,"token NULL");
        RewriteRuleTokenStream stream_LESS=new RewriteRuleTokenStream(adaptor,"token LESS");
        RewriteRuleTokenStream stream_LPARENT=new RewriteRuleTokenStream(adaptor,"token LPARENT");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_COUMER=new RewriteRuleTokenStream(adaptor,"token COUMER");
        RewriteRuleTokenStream stream_NOT=new RewriteRuleTokenStream(adaptor,"token NOT");
        RewriteRuleTokenStream stream_LIKE=new RewriteRuleTokenStream(adaptor,"token LIKE");
        RewriteRuleTokenStream stream_NOTEQUAL=new RewriteRuleTokenStream(adaptor,"token NOTEQUAL");
        RewriteRuleSubtreeStream stream_conditonName=new RewriteRuleSubtreeStream(adaptor,"rule conditonName");
        RewriteRuleSubtreeStream stream_allItem=new RewriteRuleSubtreeStream(adaptor,"rule allItem");
        try {
            // D:\\antlr_data\\CreateTest.g:25:2: ( conditonName MORE INT -> ^( TOK_ATOMCONDITION conditonName MORE INT ) | conditonName EQUAL allItem -> ^( TOK_ATOMCONDITION conditonName EQUAL allItem ) | conditonName NOTEQUAL allItem -> ^( TOK_ATOMCONDITION conditonName NOTEQUAL allItem ) | conditonName LESS INT -> ^( TOK_ATOMCONDITION conditonName LESS INT ) | conditonName ( NOT )? IN LPARENT INT ( COUMER INT )* RPARENT -> ^( TOK_ATOMCONDITION conditonName IN ( NOT )? ( INT )* ) | conditonName ( NOT )? IN LPARENT StringLiteral ( COUMER StringLiteral )* RPARENT -> ^( TOK_ATOMCONDITION conditonName IN ( NOT )? ( StringLiteral )* ) | conditonName IS ( NOT )? NULL -> ^( TOK_ATOMCONDITION conditonName IS ( NOT )? ) | conditonName LIKE StringLiteral -> ^( TOK_ATOMCONDITION conditonName LIKE StringLiteral ) )
            int alt10=8;
            alt10 = dfa10.predict(input);
            switch (alt10) {
                case 1 :
                    // D:\\antlr_data\\CreateTest.g:26:2: conditonName MORE INT
                    {
                    pushFollow(FOLLOW_conditonName_in_conditionItem202);
                    conditonName13=conditonName();

                    state._fsp--;

                    stream_conditonName.add(conditonName13.getTree());

                    MORE14=(Token)match(input,MORE,FOLLOW_MORE_in_conditionItem204);  
                    stream_MORE.add(MORE14);


                    INT15=(Token)match(input,INT,FOLLOW_INT_in_conditionItem206);  
                    stream_INT.add(INT15);


                    // AST REWRITE
                    // elements: INT, MORE, conditonName
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 26:25: -> ^( TOK_ATOMCONDITION conditonName MORE INT )
                    {
                        // D:\\antlr_data\\CreateTest.g:26:28: ^( TOK_ATOMCONDITION conditonName MORE INT )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(TOK_ATOMCONDITION, "TOK_ATOMCONDITION")
                        , root_1);

                        adaptor.addChild(root_1, stream_conditonName.nextTree());

                        adaptor.addChild(root_1, 
                        stream_MORE.nextNode()
                        );

                        adaptor.addChild(root_1, 
                        stream_INT.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // D:\\antlr_data\\CreateTest.g:28:2: conditonName EQUAL allItem
                    {
                    pushFollow(FOLLOW_conditonName_in_conditionItem228);
                    conditonName16=conditonName();

                    state._fsp--;

                    stream_conditonName.add(conditonName16.getTree());

                    EQUAL17=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_conditionItem230);  
                    stream_EQUAL.add(EQUAL17);


                    pushFollow(FOLLOW_allItem_in_conditionItem232);
                    allItem18=allItem();

                    state._fsp--;

                    stream_allItem.add(allItem18.getTree());

